# clauseledger

./: .gitignore  DEVLOG.md  LICENSE.md  NOTICE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
clauseledger/: __init__.py  abstain.py  adversarial.py  backends.py  cuad.py  evaluate.py  faults.py  ground.py  metrics.py  pipeline.py  schema.py  severity.py  severity_gold.py  verify.py
data/cuad/: replay_cache.json  subset.json
data/severity_gold/: README.md  annotations.example.json  annotations.json
demo/: index.html
demo/data/: bundle.js  contracts.json  report.json
docs/adr/: 0001-fabrication-is-gold-free-and-threshold-free.md  0002-detection-vs-asserted-recall.md  0003-static-precomputed-demo.md  0004-local-ollama-weak-model-on-purpose.md  0005-scope-six-clauses-severity-provisional.md  0006-no-rag-exhaustive-windows.md  0007-legal-concept-boundary.md  0008-severity-gold-annotation-kit.md  0009-stitch-fabrication-guard.md  0010-bootstrap-confidence-intervals.md  0011-mutation-testing-the-trust-core.md
scripts/: build_bundle.py  eval_severity_gold.py  finalize.py  generate_demo.py  make_fixture.py  mutation_test.py  run_corpus.py  run_eval.py
tests/: conftest.py  test_abstain.py  test_backends.py  test_ci.py  test_cuad.py  test_faults.py  test_ground.py  test_ollama.py  test_pipeline.py  test_properties.py  test_quality.py  test_recall.py  test_schema.py  test_severity.py  test_severity_gold.py  test_stitch.py  test_verify.py
