[project]
name = "clauseledger"
version = "0.1.0"
description = "A reliability harness for contract-obligation extraction: measures silent misses and fabrication, recovers misses, abstains instead of guessing, and publishes honest numbers."
authors = [{ name = "Yoav Aviv" }]
requires-python = ">=3.10"
license = { text = "PolyForm-Noncommercial-1.0.0" }
dependencies = ["pydantic>=2.0", "rapidfuzz>=3.0", "requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "hypothesis>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
